--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: aqua;
+    background-color: darkslategray;
 }
 
 .container {
@@ -15,4 +15,5 @@ body {
     background-color: #000;
     padding: 0;
     margin: 0;
+    border: 1px solid silver;
 }
