--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+@font-face {
+    font-family: 'press_start_2pregular';
+    src: url('./fonts/pressstart2p-regular-webfont.woff2') format('woff2'),
+         url('./fonts/pressstart2p-regular-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
 
 *, *:after, *:before {
     padding: 0;
@@ -13,6 +19,7 @@ body {
 }
 
 .snake-game {
+    font-family: 'press_start_2pregular';
     height: 500x;
     width: 500px;
     margin: 0 auto;
