--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,12 @@ body {
     flex-direction: column;
 }
 
+.snake-game__scoreboard > h2 {
+    font-size: 1.8rem;
+    padding: 1em;
+    text-decoration: underline;
+}
+
 .snake-game__scores {
     width: 400px;
     margin: 0 auto;
@@ -59,6 +65,7 @@ body {
 
 .snake-game__scores > li {
     margin: 0;
+    margin-bottom: 1em;
 }
 
 .snake-game__scores--first::before {
@@ -68,7 +75,7 @@ body {
 }
 
 .snake-game__scores--first {
-    font-size: 2rem;
+    font-size: 1.8rem;
 }
 
 .snake-game__scores--second::before {
@@ -78,7 +85,7 @@ body {
 }
 
 .snake-game__scores--second {
-    font-size: 1.75rem;
+    font-size: 1.4rem;
 }
 
 .snake-game__scores--third::before {
@@ -88,5 +95,5 @@ body {
 }
 
 .snake-game__scores--third {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
 }
