--- a/css/style.css
+++ b/css/style.css
@@ -15,35 +15,75 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: whitesmoke;
+    background-color: #00e5ff;
+}
+
+header {
+    background:#0100ca;
+    border-top: 25px solid #a255ff;
+}
+
+.title {
+    color: #FFF;
+    font-family: 'press_start_2pregular', cursive;
+    font-size: 3rem;
+    padding: 0.25em 0.5em;
+}
+
+.title::after {
+    content: "🐍";
+}
+
+.longboi {
+    height: 20px;
+    width: 36%;
+    border-radius: 0px 10px 0px 0px;
+    background: #FFF;
 }
 
 .snake-game {
-    font-family: 'press_start_2pregular';
+    font-family: 'press_start_2pregular', cursive;
     height: 500x;
-    width: 500px;
-    margin: 0 auto;
+    /* width: 500px; */
+    margin: 2em auto;
     padding: 25px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
 }
 
 .snake-game__display {
-    background-color: #000;
+    background-color: #651fff;
     padding: 0;
     margin: 0;
-    border: 10px outset orange;
+    border: 10px solid #000;
+    border-radius: 10px;
 }
 
 .theme-toggle {
     position: absolute;
-    top: 20px;
-    left: 20px;
+    top: 150px;
+    right: 20px;
     width: 25px;
     height: 25px;
 }
 
-.snake-game__scoreboard {
+.snake-game__running-score > p {
+    font-size: 3.5rem;
+    line-height: 2.75em;
+    color: #651fff
+}
+
+.snake-game__running-score > p::after {
+    content: " pts";
+}
+
+.snake-game__scoreboard,
+.snake-game__running-score {
     width: 520px;
-    background-color: yellow;
+    height: 300px;
+    background-color: #F5F5F6;
     border: 5px solid black;
     margin-top: 25px;
     text-align: center;
@@ -51,49 +91,50 @@ body {
     flex-direction: column;
 }
 
-.snake-game__scoreboard > h2 {
+.snake-game__scoreboard > h2,
+.snake-game__running-score > h2 {
     font-size: 1.8rem;
     padding: 1em;
     text-decoration: underline;
 }
 
-.snake-game__scores {
+.snake-game__high-scores {
     width: 400px;
     margin: 0 auto;
     list-style: none;
 }
 
-.snake-game__scores > li {
+.snake-game__high-scores > li {
     margin: 0;
     margin-bottom: 1em;
 }
 
-.snake-game__scores--first::before {
+.snake-game__high-scores--first::before {
     content: '1st';
     display: block;
     font-size: 0.5em;
 }
 
-.snake-game__scores--first {
+.snake-game__high-scores--first {
     font-size: 1.8rem;
 }
 
-.snake-game__scores--second::before {
+.snake-game__high-scores--second::before {
     content: '2nd';
     display: block;
     font-size: 0.5em;
 }
 
-.snake-game__scores--second {
+.snake-game__high-scores--second {
     font-size: 1.4rem;
 }
 
-.snake-game__scores--third::before {
+.snake-game__high-scores--third::before {
     content: '3rd';
     display: block;
     font-size: 0.5em;
 }
 
-.snake-game__scores--third {
+.snake-game__high-scores--third {
     font-size: 1.2rem;
 }
